[api] added cors support to API gateway
